--- a/ex024/style.css
+++ b/ex024/style.css
@@ -1,9 +1,20 @@
 @charset "UTF8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Sriracha", cursive;
+    --fonte3: "Passion One", sans-serif;
+}
+
+
+
 * {
     margin: 0px;
-    padding: 0px;
-}
+    padding: 0px;}
+    
 
 header{
     background-color: black;
@@ -12,8 +23,10 @@ header{
 }
 
 header > h1 {
+    font-family: var(--fonte2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
    /* text-transform: uppercase; */
 }
 
@@ -35,6 +48,7 @@ a:hover{
 html,body{
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 section {
@@ -42,6 +56,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -55,7 +71,8 @@ section.imagem{
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.26);
 }
 
