--- a/ex024/style.css
+++ b/ex024/style.css
@@ -1,7 +1,8 @@
 @charset "UTF8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root{
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
@@ -60,6 +61,22 @@ section {
     font-size: 3.5vw;
 }
 
+section#img01{
+    background-image: url(imagem/imagem1.jpg);
+    background-position: bottom center;
+
+
+}
+
+section#img02{
+    background-image: url(imagem/imagem2.jpg);
+    background-position: left center;
+
+
+}
+
+
+
 section.normal{
     background-color: white;
     color: black;
@@ -68,12 +85,16 @@ section.normal{
 section.imagem{
     color:white;
     background-color: rgba(65, 65, 65, 0.445);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.61);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.26);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.596);
 }
 
 footer{
