--- a/ex029/mq002/estilos/paisagem.css
+++ b/ex029/mq002/estilos/paisagem.css
@@ -1,3 +1,9 @@
 @charset "UTF8";
 
 /* aparelho deitado (landscape) */
+
+
+body{
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
