--- a/09/css/header.css
+++ b/09/css/header.css
@@ -27,6 +27,12 @@
     display: block;
 }
 
+.header-menu a:hover{
+        background-color: #e9e9e9;
+        border-radius: 20px;
+        transition: 0.3s;
+}
+
 @media (max-width:650px){
     .header {
         flex-direction: column;
